--- a/challenge_01/challenge_01.html
+++ b/challenge_01/challenge_01.html
@@ -18,8 +18,10 @@
 
   <div class="flex-box">
     <div class="div-1"></div>
-    <div class="div-2"></div>
-    <div class="div-3"></div>
+    <div class="div-content">
+      <div class="div-2"></div>
+      <div class="div-3"></div>
+    </div>
   </div>
 </body>
 
